cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesadditional-invalid-pattern-operator.yaml/results.txt
Configuration is invalid - found 1 configuration error(s), and 0 rule(s).
[ERROR] Rule parse error in rule eqeq:
 Expected exactly one key of `pattern`, `all`, `any`, `regex`, `not`, or `inside`
  --> rules/invalid-rules/additional-invalid-pattern-operator.yaml:4
   2 | - id: eqeq
   3 |   match:
   4 |     pattern: foo
     |     ^
   5 |     foo: bar
   6 |   message: Useless comparison
